Fixed the newsletter title
It had a bit of padding and I fixed it to 0 on the left. Also added a max-width for the container, so that it does not become too big on big screens

--- a/scss/_newsletter.scss
+++ b/scss/_newsletter.scss
@@ -65,6 +65,9 @@
 	//border: 2px #fffb1b solid;
 	max-width: 100%;
 	
+	@media only screen and (min-width: $break-m) {
+		max-width: 80%;
+	}
 	@media only screen and (min-width: $break-l) {
 	margin: 2rem 1rem;
 	}
@@ -90,7 +93,7 @@
 .form-container {
 	//border: 2px #2ECC71 solid;
 	font-size: 2rem;
-	padding: 0.5rem;
+	padding: 0.5rem 0.5rem 0.5rem 0;
 }
 
 .checkbox-text {
