--- a/scss/style.css
+++ b/scss/style.css
@@ -2147,6 +2147,12 @@ img.colour {
   max-width: 100%;
 }
 
+@media only screen and (min-width: 768px) {
+  .newsletter-content {
+    max-width: 80%;
+  }
+}
+
 @media only screen and (min-width: 992px) {
   .newsletter-content {
     margin: 2rem 1rem;
@@ -2175,7 +2181,7 @@ img.colour {
 
 .form-container {
   font-size: 2rem;
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 0;
 }
 
 .checkbox-text {
